crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_arguments_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = Array[Number"
---
alder::syntax

  × I was expecting another type argument or the end of this list at the end
  │ of the file
   ╭─[/project/src/main.ald:1:22]
 1 │ type X = Array[Number
   ·               ┬
   ·               ╰── this type argument list starts here
   ╰────
  help: separate type arguments with commas and close the list with `]`
