crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_error_row_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = [:timeout"
---
alder::syntax

  × I was expecting `|` or `]` after this error tag at the end of the file
   ╭─[/project/src/main.ald:1:19]
 1 │ type X = [:timeout
   ·          ┬
   ·          ╰── this `[` opens here
   ╰────
  help: separate error tags with `|` and close the row with `]`
