crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_error_row_extension.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = [:timeout | 1]"
---
alder::syntax

  × I was expecting an error tag or row variable after `|`
   ╭─[/project/src/main.ald:1:22]
 1 │ type X = [:timeout | 1]
   ·          ┬           ┬
   ·          │           ╰── expected `:tag` or a row variable
   ·          ╰── this error row starts here
   ╰────
