crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_error_row_start.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = [1]"
---
alder::syntax

  × I was expecting an error tag, row variable, or `]`
   ╭─[/project/src/main.ald:1:11]
 1 │ type X = [1]
   ·          ┬┬
   ·          │╰── expected `:tag`, a row variable, or `]`
   ·          ╰── this error row starts here
   ╰────
