crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_error_row_tag.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = [:1]"
---
alder::syntax

  × I was expecting an error tag such as `:failed`
   ╭─[/project/src/main.ald:1:11]
 1 │ type X = [:1]
   ·          ┬┬
   ·          │╰── expected `:` followed by a lower-case tag name
   ·          ╰── this error row starts here
   ╰────
