crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_error_tag_payload.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = [:failed(1)]"
---
alder::syntax

  × I was expecting a type
   ╭─[/project/src/main.ald:1:19]
 1 │ type X = [:failed(1)]
   ·          ┬        ┬
   ·          │        ╰── expected a type here
   ·          ╰── this error row starts here
   ╰────
  help: types include names like `Number`, applications like `Array[Number]`,
        and type variables like `a`
