crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_error_tag_separator.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = [:failed(Number]"
---
alder::syntax

  × I was expecting `,` or `)` after this tag payload type
   ╭─[/project/src/main.ald:1:25]
 1 │ type X = [:failed(Number]
   ·                  ┬      ┬
   ·                  │      ╰── expected `,` or `)`
   ·                  ╰── this `(` opens here
   ╰────
