crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_function_open.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: type X = fn -> a
---
alder::syntax

  × I was expecting `(` after `fn` in this function type
   ╭─[/project/src/main.ald:1:13]
 1 │ type X = fn -> a
   ·          ┬  ┬
   ·          │  ╰── expected `(`
   ·          ╰── this function type starts here
   ╰────
