crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_function_return.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: type X = fn(a)
---
alder::syntax

  × I was expecting a type at the end of the file
   ╭─[/project/src/main.ald:1:15]
 1 │ type X = fn(a)
   ·          ┬
   ·          ╰── this function type starts here
   ╰────
  help: types include names like `Number`, applications like `Array[Number]`,
        and type variables like `a`
