crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_function_separator.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: type X = fn(a b) c
---
alder::syntax

  × I was expecting `,` or `)` after this parameter type
   ╭─[/project/src/main.ald:1:15]
 1 │ type X = fn(a b) c
   ·            ┬  ┬
   ·            │  ╰── expected `,` or `)`
   ·            ╰── this `(` opens here
   ╰────
  help: separate parameter types with commas and close the list with `)`
